修复图片转BASE64的BUG